--- a/index.css
+++ b/index.css
@@ -38,13 +38,20 @@ h1{
     
     position: absolute;
     margin-left: 2%;
+    margin-right:40%;
     font-family: Arial Rounded MT Bold;
+    overflow-wrap: normal;
+    width: 35%;
     
 }
 h1 a{
     color:#F2E9E4; 
     text-decoration: none;
-    font-size:120%;
+    font-size:100%;
+    overflow-wrap: normal;
+    width: 35%;
+
+    
 }
 
 
@@ -52,11 +59,12 @@ h1 a{
 
 
 .navBar a{
+    
     float:right;
     width:15%;
     color:#F2E9E4; 
     text-decoration: none;
-    font-size:.6cm;
+    font-size:100%;
 }
 
 
@@ -85,9 +93,9 @@ h2 {
  text-align: left;
  font-size:120%;
  margin-left: 40%;
+ margin-right: 20%;
  margin-right:auto;
  padding-top: 2%;
- overflow: hidden;
  font-family: Gill Sans;
  color: #22223B;
  margin-top: auto;
@@ -100,7 +108,7 @@ h2 {
 
 .me{
     margin-left: 5%;
-    margin-right: auto;
+    margin-right: 20%;
     width: 20%;
     float:left;
 }
