--- a/Contact.css
+++ b/Contact.css
@@ -1,92 +1,93 @@
+
 .container{
     overflow: hidden;
     background-image: url(images/scrolling.png);
-    height: 700vh;
+    height: 120vh;
     width: 100%;
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
     position: relative;
     animation: slide 100s linear infinite;
+   
 }
-
-
-
 .navBar{
-    width: 100%;
-    display: inline;
-    position: relative;
-    top: -160px;
-    left: 750px;
+    
+    background-color: #9a8c98;
+    overflow: hidden;
     font-family: Arial Rounded MT Bold;
-    font-size:larger;
+    height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: -1;
+    width: 100%;
+    
 
 }
+.navBar a:hover { 
+    color: #4a4e69;
+}
 
-.bar{
-    z-index: -1;
+h1 a:hover{
+    color: #4a4e69;
+}
+
+
+h1{
+    
+    position: absolute;
+    margin-left: 2%;
+    margin-right:40%;
+    font-family: Arial Rounded MT Bold;
+    overflow-wrap: normal;
+    width: 35%;
+    
 }
 
 h1 a{
-    color:#F2E9E4;
+    color:#F2E9E4; 
     text-decoration: none;
-    font-family: Arial Rounded MT Bold;
-    font-size: 1.2cm;
-    margin-left:-740px;
+    font-size:100%;
+    overflow-wrap: normal;
+    width: 35%;
+
     
 }
 
 
 
 
+
+.navBar a{
+    
+    float:right;
+    width:15%;
+    color:#F2E9E4; 
+    text-decoration: none;
+    font-size:100%;
+}
+
+
 h2 {
     color:#4A4E69;
     position: relative;
-    right: 455px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
     font-family: Arial Rounded MT Bold;
     font-size: 1.2cm;
     text-align: center;
     
 }
 
-nav ul h3{
-    padding-left: 0%;
-    padding-right:1%;
-    position: static;
-    
-}
-
-nav ul h3 a {
-    margin-top: -10px;
-    float:left;
-    width:20%;
-    color:#F2E9E4; 
-    text-decoration: none;
-    font-size:.6cm;
-}
-
-
-
-nav ul h1 a {
-    margin-top: 10px;
-    float:left;
-    width : 400px;
-    color:#F2E9E4; 
-    text-decoration: none;
-    font-size:1.2cm;
-    align-items: center;
-
-}
-
 p {
 position:relative;
-left: 10px;
- width: 1000px;
- height:50px;
+ width: 90%;
  text-align: center;
- font-size: .7cm;
- margin: 0 auto;
- padding-top: 40px;
+ font-size: 25px;
+ margin-left: 5%;
+ margin-right: 5%;
+ padding-top: 5%;
  overflow: hidden;
  font-family: Gill Sans;
  color: #22223B;
@@ -96,5 +97,5 @@ h4{
     color: #22223B;
     font-family: Gill Sans;
     text-align: center;
-    font-size: .6cm;
+    font-size: 20px;
 }
