--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 .container{
     overflow: hidden;
     background-image: url(images/scrolling.png);
-    height: 700vh;
+    height: 120vh;
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -17,7 +17,7 @@
     background-color: #9a8c98;
     overflow: hidden;
     font-family: Arial Rounded MT Bold;
-    height: 2%;
+    height: 120px;
     margin-left: auto;
     margin-right: auto;
     z-index: -1;
