--- a/Academic.css
+++ b/Academic.css
@@ -76,14 +76,35 @@ h2 {
 }
 
 p {
-position:relative;
- width: 90%;
- text-align: left;
- font-size: 20px;
- margin-left: 5%;
- margin-right: 5%;
- padding-top: 2%;
- overflow: hidden;
- font-family: Gill Sans;
- color: #22223B;
+    text-indent: 20px;
+    width: 50%;
+    text-align: left;
+    font-size:120%;
+    margin-left: 40%;
+    margin-right: 20%;
+    margin-right:auto;
+    font-family: Gill Sans;
+    color: #22223B;
+    margin-top: auto;
+    float:center;
+    
+}
+
+h2 {
+    color:#4A4E69;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    font-family: Arial Rounded MT Bold;
+    font-size: 1.2cm;
+    text-align: center;
+    
+}
+
+.me{
+    margin-left: 5%;
+    margin-right: 10%;
+    width: 20%;
+    float:left;
 }
