--- a/index.css
+++ b/index.css
@@ -88,14 +88,13 @@ h2 {
 
 
 .par {
-
+text-indent: 20px;
  width: 50%;
  text-align: left;
  font-size:120%;
  margin-left: 40%;
  margin-right: 20%;
  margin-right:auto;
- padding-top: 2%;
  font-family: Gill Sans;
  color: #22223B;
  margin-top: auto;
@@ -108,7 +107,7 @@ h2 {
 
 .me{
     margin-left: 5%;
-    margin-right: 20%;
+    margin-right: 10%;
     width: 20%;
     float:left;
 }
